[project]
name = "nf-collapse-reference"
version = "0.0.0"
description = ""
authors = [
    {name = "Ian Boyes",email = "dev@igboyes.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
